--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -1,15 +1,32 @@
 name: Update README
 on:
   schedule:
-    - cron: '0 0 * * *' # Каждый день в полночь
+    - cron: '0 * * * *' # Каждый час (для теста)
   workflow_dispatch:
+  push:
+    branches: [ main ]
+
 jobs:
   update:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-python@v4
-      - run: python scripts/update_readme.py
-      - uses: stefanzweifel/git-auto-commit-action@v4
         with:
-          commit_message: "📄 Обновление README"
+          fetch-depth: 0 # Важно для получения истории коммитов
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'
+
+      - name: Install dependencies
+        run: pip install python-dateutils requests
+
+      - name: Update README
+        run: python scripts/update_readme.py
+
+      - name: Commit changes
+        uses: stefanzweifel/git-auto-commit-action@v4
+        with:
+          commit_message: "📈 Обновление активности"
+          branch: main
