--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -12,10 +12,12 @@ jobs:
       - uses: actions/checkout@v3
 
       - uses: Platane/snk@v2
-        id: snake-gif
         with:
           github_user_name: dmitrij-el
           svg_out_path: dist/github-contribution-grid-snake.svg
+          color: 'orange'  # Цвет змейки
+          width: 800       # Ширина
+          height: 300      # Высота
 
       - uses: crazy-max/ghaction-github-pages@v3
         with:
