--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -1,7 +1,7 @@
 name: Update README
 on:
   schedule:
-    - cron: '0 * * * *' # Каждый час (для теста)
+    - cron: '0 9,15,21 * * *'  # 3 раза в день (9:00, 15:00, 21:00)
   workflow_dispatch:
   push:
     branches: [ main ]
@@ -20,7 +20,7 @@ jobs:
           python-version: '3.10'
 
       - name: Install dependencies
-        run: pip install python-dateutils requests
+        run: pip install python-dateutil requests
 
       - name: Update README
         run: python scripts/update_readme.py
