--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -23,6 +23,8 @@ jobs:
         run: pip install python-dateutil requests
 
       - name: Update README
+        env:
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
         run: python scripts/update_readme.py
 
       - name: Commit changes
