--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -1,6 +1,6 @@
 name: Metrics
 on:
-  schedule: [{cron: "0 0 * * *"}]  # обновление каждый день
+  schedule: [{cron: "0 0 * * *"}]
   workflow_dispatch:
 
 jobs:
