--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -9,6 +9,16 @@ jobs:
     steps:
       - uses: lowlighter/metrics@latest
         with:
+          filename: metrics.svg
           token: ${{ secrets.METRICS_TOKEN }}
           base: header, repositories, activity, community
           config_timezone: Europe/Moscow
+
+      - name: Commit and push the generated metrics
+        run: |
+          git config --global user.name "GitHub Action"
+          git config --global user.email "action@github.com"
+          git pull
+          git add metrics.svg
+          git commit -m "chore: update metrics" || echo "No changes to commit"
+          git push
