--- a/.github/workflows/profile_ci.yml
+++ b/.github/workflows/profile_ci.yml
@@ -1,4 +1,4 @@
-name: Update README
+name: Refresh GitHub Profile
 on:
   schedule:
     - cron: '0 9,15,21 * * *'  # 3 раза в день (9:00, 15:00, 21:00)
