--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -24,4 +24,5 @@ jobs:
           git config user.email "github-actions@github.com"
           git add metrics.svg
           git commit -m "chore: update metrics.svg" || echo "No changes to commit"
+          git pull --rebase origin main
           git push
