--- a/.github/workflows/profile_ci.yml
+++ b/.github/workflows/profile_ci.yml
@@ -1,18 +1,51 @@
-name: Refresh GitHub Profile
+name: Unified Profile Maintenance
+
 on:
   schedule:
-    - cron: '0 9,15,21 * * *'  # 3 раза в день (9:00, 15:00, 21:00)
+    - cron: '0 0,9,15,21 * * *'  # 4 раза в день (00:00, 09:00, 15:00, 21:00)
   workflow_dispatch:
   push:
     branches: [ main ]
 
 jobs:
-  update:
+  update-metrics:
+    name: Update GitHub Metrics
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
         with:
-          fetch-depth: 0 # Важно для получения истории коммитов
+          fetch-depth: 0
+
+      - name: Generate metrics.svg
+        uses: lowlighter/metrics@latest
+        with:
+          token: ${{ secrets.METRICS_TOKEN }}
+          base: header, repositories, activity, community
+          config_timezone: Europe/Moscow
+          filename: metrics.svg
+
+      - name: Generate contribution snake
+        uses: Platane/snk@v3
+        with:
+          github_user_name: dmitrij-el
+          outputs: dist/github-contribution-grid-snake.svg
+
+      - name: Push snake to output branch
+        uses: crazy-max/ghaction-github-pages@v3
+        with:
+          target_branch: output
+          build_dir: dist
+        env:
+          GITHUB_TOKEN: ${{ secrets.METRICS_TOKEN }}
+
+  update-readme:
+    name: Update README Content
+    needs: update-metrics
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
 
       - name: Set up Python
         uses: actions/setup-python@v4
@@ -22,13 +55,27 @@ jobs:
       - name: Install dependencies
         run: pip install python-dateutil requests
 
-      - name: Update README
+      - name: Update WakaTime stats
+        uses: athul/waka-readme@master
+        with:
+          WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
+
+      - name: Run custom README update
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
         run: python scripts/update_readme.py
 
-      - name: Commit changes
-        uses: stefanzweifel/git-auto-commit-action@v4
-        with:
-          commit_message: "📈 Обновление активности"
-          branch: main
+      - name: Check for changes
+        id: changes
+        run: |
+          git diff --quiet || echo "changed=true" >> $GITHUB_OUTPUT
+
+      - name: Commit and push changes
+        if: steps.changes.outputs.changed == 'true'
+        run: |
+          git config user.name "github-actions"
+          git config user.email "github-actions@github.com"
+          git add .
+          git commit -m "📊 Unified profile update [skip ci]"
+          git pull --rebase
+          git push
