--- a/.github/workflows/profile_ci.yml
+++ b/.github/workflows/profile_ci.yml
@@ -80,17 +80,13 @@ jobs:
       - name: Commit and push changes
         if: steps.changes.outputs.changed == 'true'
         run: |
-          # Configure git
-          git config user.name "github-actions"
-          git config user.email "github-actions@github.com"
-
-          # Reset to remote state to avoid conflicts
-          git fetch origin main
-          git reset --hard origin/main
-
-          # Re-apply changes
-          git add .
-          git commit -m "📊 Unified profile update [skip ci]"
-
-          # Push with force (since we reset)
-          git push --force
+          git pull origin main --rebase
+          if git diff --quiet; then
+            echo "No changes to commit"
+          else
+            git add .
+            git commit -m "📊 Unified profile update [skip ci]"
+            git push origin main
+          fi
+        env:
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
