--- a/.github/workflows/profile_ci.yml
+++ b/.github/workflows/profile_ci.yml
@@ -21,14 +21,18 @@ jobs:
         with:
           token: ${{ secrets.METRICS_TOKEN }}
           base: header, repositories, activity, community
-          config_timezone: Europe/Moscow
           filename: metrics.svg
+          config_timezone: Europe/Moscow
+          config_display: large
+          config_twemoji: yes
+          config_padding: 0, 10%
 
       - name: Generate contribution snake
-        uses: Platane/snk@v3
+        uses: Platane/snk/svg-only@v3
         with:
           github_user_name: dmitrij-el
-          outputs: dist/github-contribution-grid-snake.svg
+          outputs: |
+            dist/github-contribution-grid-snake.svg
 
       - name: Commit metrics and snake changes
         run: |
