--- a/.github/workflows/profile_ci.yml
+++ b/.github/workflows/profile_ci.yml
@@ -28,13 +28,15 @@ jobs:
           config_padding: 0, 10%
           template: classic-dark
 
-      - name: Generate contribution snake
+      - name: generate github-contribution-grid-snake.svg
         uses: Platane/snk/svg-only@v3
         with:
-          github_user_name: dmitrij-el
+          github_user_name: ${{ github.repository_owner }}
           outputs: |
-            dist/github-contribution-grid-snake.svg
-
+            dist/github-contribution-grid-snake.svg?color_snake=#58a6ff&color_dots=#161b22,#1b1f24,#22272e,#2d333b,#3c3f44
+            dist/github-contribution-grid-snake-dark.svg?palette=github-dark&color_snake=#58a6ff&color_dots=#161b22,#1b1f24,#22272e,#2d333b,#3c3f44
+            
+            
       - name: Commit metrics and snake changes
         run: |
           git config --global user.name "GitHub Actions"
