--- a/.github/workflows/profile_ci.yml
+++ b/.github/workflows/profile_ci.yml
@@ -80,22 +80,23 @@ jobs:
 
       - name: Run custom README update
         env:
-          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          GH_TOKEN: ${{ secrets.METRICS_TOKEN }}
         run: python scripts/update_readme.py
 
       - name: Commit README changes (if any)
         run: |
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
-          
-          # Проверяем, есть ли изменения в README
+
+          git pull origin main --rebase  # Сначала подтягиваем свежие изменения
+
+          # Проверяем есть ли изменения в README
           if ! git diff --quiet README.md; then
             git add README.md
             git commit -m "📝 Update README content [skip ci]"
-            git pull origin main --rebase  # Подтягиваем актуальные изменения
             git push origin main
           else
             echo "No changes in README.md."
           fi
         env:
-          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.METRICS_TOKEN }}
