--- a/.github/workflows/profile_ci.yml
+++ b/.github/workflows/profile_ci.yml
@@ -34,11 +34,10 @@ jobs:
           outputs: |
             dist/github-contribution-grid-snake.svg?color_snake=#58a6ff&color_dots=#161b22,#1b1f24,#22272e,#2d333b,#3c3f44
             dist/github-contribution-grid-snake-dark.svg?palette=github-dark&color_snake=#58a6ff&color_dots=#161b22,#1b1f24,#22272e,#2d333b,#3c3f44
-            
 
   update-readme:
     name: Update README Content
-    needs: update-metrics  # Ждём завершения update-metrics
+    needs: update-metrics
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -63,26 +62,27 @@ jobs:
           GH_TOKEN: ${{ secrets.METRICS_TOKEN }}
         run: python scripts/update_readme.py
 
-      - name: Commit README changes (if any)
+      - name: Commit README changes
         run: |
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
-
-          git stash
-          git pull origin main --rebase
-
-          # Если при возврате изменений будут конфликты - выходим с ошибкой
-          if ! git stash pop; then
-            echo "⚠️ Conflict detected after stash pop!"
-            exit 1
-          fi
-
-          if ! git diff --quiet README.md; then
-            git add README.md
-            git commit -m "📝 Update README content [skip ci]"
-            git push origin main
-          else
+          
+          # Проверяем, есть ли изменения в README.md
+          if git diff --quiet README.md; then
             echo "No changes in README.md."
+            exit 0
           fi
+          
+          # Добавляем только README.md
+          git add README.md
+          
+          # Коммитим изменения
+          git commit -m "📝 Update README content [skip ci]"
+          
+          # Делаем pull с rebase перед push
+          git pull --rebase
+          
+          # Пушим изменения
+          git push origin main
         env:
           GITHUB_TOKEN: ${{ secrets.METRICS_TOKEN }}
