--- a/.github/workflows/profile_ci.yml
+++ b/.github/workflows/profile_ci.yml
@@ -27,13 +27,23 @@ jobs:
           config_twemoji: yes
           config_padding: 0, 10%
 
-      - name: generate github-contribution-grid-snake.svg
+      - name: Generate GitHub contribution snake
         uses: Platane/snk/svg-only@v3
         with:
           github_user_name: ${{ github.repository_owner }}
           outputs: |
-            dist/github-contribution-grid-snake.svg?color_snake=#58a6ff&color_dots=#161b22,#1b1f24,#22272e,#2d333b,#3c3f44
-            dist/github-contribution-grid-snake-dark.svg?palette=github-dark&color_snake=#58a6ff&color_dots=#161b22,#1b1f24,#22272e,#2d333b,#3c3f44
+            github-contribution-grid-snake.svg?color_snake=#58a6ff&color_dots=#161b22,#1b1f24,#22272e,#2d333b,#3c3f44
+            github-contribution-grid-snake-dark.svg?palette=github-dark&color_snake=#58a6ff&color_dots=#161b22,#1b1f24,#22272e,#2d333b,#3c3f44
+
+      - name: Commit generated files
+        run: |
+          git config --global user.name "GitHub Actions"
+          git config --global user.email "actions@github.com"
+          git add *.svg
+          git commit -m "🔄 Update contribution snake graphics" || echo "No changes to commit"
+          git push
+        env:
+          GITHUB_TOKEN: ${{ secrets.METRICS_TOKEN }}
 
   update-readme:
     name: Update README Content
