--- a/.github/workflows/profile_ci.yml
+++ b/.github/workflows/profile_ci.yml
@@ -39,11 +39,23 @@ jobs:
         run: |
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
+
+          # Проверяем, есть ли изменения
+          if git diff --quiet --exit-code; then
+            echo "No changes detected"
+            exit 0
+          fi
+
+          # Если есть изменения
           git add *.svg
-          git commit -m "🔄 Update contribution snake graphics" || echo "No changes to commit"
-          git push
+          git commit -m "🔄 Update contribution snake graphics"
+
+          # Пытаемся обновить и отправить изменения
+          for i in {1..3}; do
+            git pull --rebase origin main && git push origin main && break || sleep 5
+          done
         env:
-          GITHUB_TOKEN: ${{ secrets.METRICS_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   update-readme:
     name: Update README Content
