--- a/.github/workflows/profile_ci.yml
+++ b/.github/workflows/profile_ci.yml
@@ -39,21 +39,10 @@ jobs:
         run: |
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
-
-          # Проверяем, есть ли изменения
-          if git diff --quiet --exit-code; then
-            echo "No changes detected"
-            exit 0
-          fi
-
-          # Если есть изменения
           git add *.svg
-          git commit -m "🔄 Update contribution snake graphics"
-
-          # Пытаемся обновить и отправить изменения
-          for i in {1..3}; do
-            git pull --rebase origin main && git push origin main && break || sleep 5
-          done
+          git commit -m "🔄 Update contribution snake graphics" || echo "No changes to commit"
+          git pull --rebase origin main  # Добавляем эту строку
+          git push origin main
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
