--- a/.github/workflows/profile_ci.yml
+++ b/.github/workflows/profile_ci.yml
@@ -32,8 +32,9 @@ jobs:
         with:
           github_user_name: ${{ github.repository_owner }}
           outputs: |
-            github-contribution-grid-snake.svg?color_snake=#58a6ff&color_dots=#ebedf0,#9be9a8,#40c463,#30a14e,#216e39
-            github-contribution-grid-snake-dark.svg?palette=github-dark&color_snake=#58a6ff&color_dots=#161b22,#0e4429,#006d32,#26a641,#39d353
+            dist/github-snake.svg
+            dist/github-snake-dark.svg?palette=github-dark
+            dist/ocean.gif?color_snake=orange&color_dots=#bfd6f6,#8dbdff,#64a1f4,#4b91f1,#3c7dd9
 
       - name: Commit generated files
         run: |
