--- a/.github/workflows/profile_ci.yml
+++ b/.github/workflows/profile_ci.yml
@@ -32,9 +32,8 @@ jobs:
         with:
           github_user_name: ${{ github.repository_owner }}
           outputs: |
-            dist/github-snake.svg
-            dist/github-snake-dark.svg?palette=github-dark
-            dist/ocean.gif?color_snake=orange&color_dots=#bfd6f6,#8dbdff,#64a1f4,#4b91f1,#3c7dd9
+            github-contribution-grid-snake.svg?color_snake=#58a6ff&color_dots=#ebedf0,#7EE081,#4FCB69,#2EA44F,#1A7F37
+            github-contribution-grid-snake-dark.svg?palette=github-dark&color_snake=#58a6ff&color_dots=#161b22,#00C853,#00E676,#00FF88,#69F0AE
 
       - name: Commit generated files
         run: |
