--- a/.github/workflows/profile_ci.yml
+++ b/.github/workflows/profile_ci.yml
@@ -32,8 +32,8 @@ jobs:
         with:
           github_user_name: ${{ github.repository_owner }}
           outputs: |
-            github-contribution-grid-snake.svg?color_snake=#58a6ff&color_dots=#ebedf0,#7EE081,#4FCB69,#2EA44F,#1A7F37
-            github-contribution-grid-snake-dark.svg?palette=github-dark&color_snake=#58a6ff&color_dots=#161b22,#00C853,#00E676,#00FF88,#69F0AE
+            github-contribution-grid-snake.svg?color_snake=#58a6ff&color_dots=#ebedf0,#00FF88,#00E676,#00C853,#00A040
+            github-contribution-grid-snake-dark.svg?palette=github-dark&color_snake=#58a6ff&color_dots=#161b22,#00FF88,#00FF00,#76FF03,#B2FF59
 
       - name: Commit generated files
         run: |
