--- a/.github/workflows/profile_ci.yml
+++ b/.github/workflows/profile_ci.yml
@@ -70,10 +70,10 @@ jobs:
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
 
-      - name: Run custom README update
-        env:
-          GH_TOKEN: ${{ secrets.METRICS_TOKEN }}
-        run: python scripts/update_readme.py
+#      - name: Run custom README update
+#        env:
+#          GH_TOKEN: ${{ secrets.METRICS_TOKEN }}
+#        run: python scripts/update_readme.py
 
       - name: Commit README changes
         run: |
