--- a/.github/workflows/summary-cards.yml
+++ b/.github/workflows/summary-cards.yml
@@ -14,3 +14,5 @@ jobs:
       - uses: vn7n24fzkq/github-profile-summary-cards@release
         with:
           USERNAME: dmitrij-el
+        env:
+          GITHUB_TOKEN: ${{ secrets.METRICS_TOKEN }}
